--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,20 @@
-h1 {
-    color: blue;
+body{
+    background-color: #2F496E;
 }
+
+h1 {
+    font-family: 'Amaranth', sans-serif;
+    font-family: 'Syncopate', sans-serif;
+    color: #ED8C72;
+}
+h2{
+    font-family: 'Amaranth', sans-serif;
+}
+
+/* 
+https://www.canva.com/learn/100-color-combinations/
+#2988BC - Grecian Blue
+#F4EADE - Plaster 
+#ED8C72 - Pink
+#2F496E - Dark Blue
+*/
