--- a/public/css/style.css
+++ b/public/css/style.css
@@ -12,7 +12,7 @@ h1 {
 }
 
 .desc{
-    color: black;
+    color: #F4EADE;
 }
 
 .links{
@@ -58,14 +58,11 @@ h1 {
     margin: 15px 2.5px 0px 2.5px;
 }
 
-.container-sm{
-    background-color: #2988BC;
-    border-radius: .2rem;
-}
-
 .jokeGroup{
     padding: 10px;
     margin-top: 50px;
+    background-color: #2988BC;
+    border-radius: .2rem;
 }
 
 .name{
@@ -84,11 +81,11 @@ h1 {
 .submitter{
     color:black;
 }
+
 footer{
     padding-top: 50px;
     color: black;
 }
-
 
 
 /* 
