added some notes, added portfolio link, and removed erroneous comments/code

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -87,6 +87,11 @@ footer{
     color: black;
 }
 
+.promo{
+    color: black;
+    text-decoration: none !important;
+}
+
 
 /* 
 https://www.canva.com/learn/100-color-combinations/
